--- a/setup/src/App.css
+++ b/setup/src/App.css
@@ -42,3 +42,26 @@ body {
 }
 
 .tipSeenInBox{}
+
+.subtext{
+  margin: 0 8px 8px 8px;
+  size: 14px;
+  color: #676879;
+  line-height: 22px;
+  font-style: italic;
+}
+
+.actionBoxesContainer{
+  max-width: 33vw;
+  font-size: 0.85rem;
+}
+
+.actionBoxesContainer div{
+  padding: 5px;
+}
+
+
+div.actionBoxesContainer p{
+  margin: 0;
+  padding: 0 5px 5px 10px;
+}
